[workspace]
resolver = "2"
members = ["projects/*"]
default-members = [
    "projects/diffuser-load",
]
exclude = [
    "projects/.DS_Store",
    "projects/diffuser-pack"
]

[profile.release]
lto = true
panic = "abort"


[workspace.dependencies.diffuser-error]
version = "0.0.*"
path = "projects/diffuser-errors"
