[package]
name = "civitai"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Load diffusers' weight from file."
keywords = ["diffusers"]
categories = ["machine-learning::diffusers"]
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.154"
reqwest = { version = "0.11.14", features = ["json"] }
serde_derive = "1.0.154"
serde_json = "1.0.94"
curl = "0.4.1"


[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }

[features]
default = []
