[package]
name = "civitai"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Load models from civit ai."
keywords = ["diffusers"]
categories = ["web-programming::http-client"]
repository = "https://github.com/oovm/diffuser-load"
documentation = "https://docs.rs/civitai"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
serde = "1.0.154"
reqwest = { version = "0.11.14", features = ["json"] }
serde_derive = "1.0.154"
serde_json = "1.0.94"
trauma = "2.2.0"


[dev-dependencies]
tokio = { version = "1.26.0", features = ["full"] }

[features]
default = []
