[package]
name = "diffuser-error"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Load diffusers' weight from file."
keywords = ["diffusers"]
categories = ["machine-learning::diffusers"]
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/diffuser-error"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.5.0"


[dev-dependencies]

[features]
default = []
