[package]
name = "diffuser-error"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Shared diffusers' errors."
keywords = ["diffusers"]
categories = ["machine-learning::diffusers"]
homepage = "https://github.com/oovm/diffuser-webui.rs"
repository = "https://github.com/oovm/diffuser-webui.rs/tree/dev/projects/diffuser-errors"
documentation = "https://docs.rs/diffuser-error"
readme = "readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = { version = "2.5.0", features = ["serde"] }
tracing = "0.1.40"
serde = { version = "1.0.198", features = ["default"] }
candle-core = { version = "0.4.1", default-features = false}

[dev-dependencies]


[features]
default = []
