[package]
name = "diffusers-load"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Load diffusers' weight from file."
keywords = ["diffusers"]
categories = ["machine-learning::diffusers"]
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
url = "2.5.0"
serde = { version = "1.0.198" }
safetensors = "0.4.3"
tokenizers = "0.19.1"
candle-core = "0.4.1"
candle-transformers = "0.4.1"
json5 = "0.4.1"
tracing = "0.1.40"
anyhow = "1.0.82"
image = "0.25.1"
tracing-subscriber = "0.3.18"
hf-hub = { version = "0.3.2" }
serde_yaml2 = "0.1.1"

[dependencies.diffuser-error]
version = "0.0.0"
path = "../diffuser-errors"
features = []

[dev-dependencies]

[features]
default = ["cuda"]
cuda = ["candle-core/cuda", "candle-transformers/cuda"]
cudnn = ["candle-core/cudnn"]
flash = ["candle-transformers/flash-attn"]