[package]
name = "diffusers-pack"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Pack diffusers' weight to file."
keywords = ["diffusers"]
categories = ["machine-learning::diffusers"]
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/sub_projects"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
safetensors = "0.2.8"
tch = "0.10.3"
serde-pickle = "1.1.1"
zip = "0.6.4"
clap = "4.1.8"
waifu-diffuser-types = "0.0.0"

[dev-dependencies]

[features]
default = []
